@@ -1,3 +1,7 @@
+2011-07-01  Joel Brobecker  <brobecker@adacore.com>
+
+	* gdb.ada/catch_ex.exp: Add temporary catchpoint tests.
+
 2011-07-01  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	Test GCC PR debug/49546.
