@@ -1,3 +1,9 @@
+2011-07-01  Joel Brobecker  <brobecker@adacore.com>
+
+	* ada-lang.c (print_it_exception): Print temporary catchpoints
+	as "Temporary catchpoint".
+	(print_mention_exception): Likewise.
+
 2011-07-01  Tom Tromey  <tromey@redhat.com>
 
 	* jv-lang.c (java_language_defn): Use java_printchar,
